--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -58,20 +58,22 @@
 
 
 @inproceedings{Martin:2014cr,
-	Acmid = {2557226},
-	Address = {New York, NY, USA},
-	Author = {Martin, Charles and Gardner, Henry and Swift, Ben},
-	Booktitle = {Proc. CHI '14},
-	Date-Added = {2014-04-26 22:46:30 +0000},
-	Date-Modified = {2015-07-21 06:11:01 +0000},
-	Isbn = {978-1-4503-2473-1},
-	Keywords = {expression, gesture, multitouch, music, percussion, user experience},
-	Location = {Toronto, Ontario, Canada},
-	Numpages = {4},
-	Pages = {1025--1028},
-	Publisher = {ACM},
-	Title = {Exploring Percussive Gesture on i{P}ads with {E}nsemble {M}etatone},
-	Year = {2014}} 
+ author = {Martin, Charles and Gardner, Henry and Swift, Ben},
+ title = {Exploring Percussive Gesture on i{P}ads with {E}nsemble {M}etatone},
+ booktitle = {Proceedings of the SIGCHI Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {1025--1028},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2556288.2557226},
+ doi = {10.1145/2556288.2557226},
+ acmid = {2557226},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {expression, gesture, multitouch, music, percussion, user experience},
+} 
 
 
 
