--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -73,7 +73,26 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {expression, gesture, multitouch, music, percussion, user experience},
-} 
+}
+
+
+@incollection{Pressing:1988uo,
+	Abstract = {How do people improvise? How is improvisational skill learned and taught?
+These questions are the subject of this paper. They are difficult questions, for behind them stand long-standing philosophical quandries like the origins of novelty and the nature of expertise, which trouble psychologists and artificial intelligence workers today almost as much as they did Plato and Socrates in the fourth and fifth centuries BC.
+In a previous article (Pressing 1984a) I summarised a number of general properties of the improvisation process on the basis of the diverse historical writings of artists, teachers, and musicologists. This material was integrated with precepts from cognitive psychology to sketch out the beginnings of a general theory of improvisation.
+In this article a much more explicit cognitive formulation is presented, the first proper (though by no means necessarily correct) theory of improvised behaviour in music. The building of this theory has required input from many disparate fields with which the general musical reader may not be familiar. For this reason I begin with a survey of appropriate background research and its relation to improvisation. Some of these areas may initially seem distant from the topic at hand.
+},
+	Address = {Oxford, UK},
+	Author = {Jeff Pressing},
+	Booktitle = {Generative Processes in Music},
+	Date-Added = {2014-02-13 03:06:31 +0000},
+	Date-Modified = {2015-06-25 06:50:07 +0000},
+	Editor = {J. Sloboda},
+	Keywords = {improvisation, model, music,},
+	Publisher = {Oxford University Press},
+	Title = {Improvisation: Methods and Models},
+	Year = {1988}}
+
 
 
 
