--- a/flux-entropy-paper/references.bib
+++ b/flux-entropy-paper/references.bib
@@ -233,7 +233,19 @@ In this article a much more explicit cognitive formulation is presented, the fir
 	Pages = {2825--2830},
 	Title = {Scikit-learn: Machine Learning in {P}ython},
 	Volume = {12},
-	Year = {2011}} 
+	Year = {2011}}
+
+
+@book{Aristotle:350rt,
+	Author = {Aristotle},
+	Date-Added = {2015-09-21 08:47:36 +0000},
+	Date-Modified = {2015-09-21 08:48:56 +0000},
+	Note = {Translated by S. H. Butcher},
+	Publisher = {The Internet Classics Archive},
+	Title = {Poetics},
+	Url = {http://classics.mit.edu/Aristotle/poetics.1.1.html},
+	Year = {350 B.C.E.}}
+
 
 
 @inproceedings{Kannampallil:2007fp,
