updates to conclusion

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -493,28 +493,36 @@ the performers explored was relatively stable.
 
 \section{Conclusions}
 
-In this note we have extended previous work on transition
-matrices with two simple matrix measures, flux and entropy, both of
-which have been demonstrated to have significant discriminatory power
-with regards to a corpus of 95 collaborative touch-screen
-interactions. Not only do these measures differentiate between
-different types of sessions and the internal structure of these
-sessions, but they have explanatory power that has thrown new light on
-the musical interactions under examination. HCI researchers are
-increasingly concerned with interactions that happen in-the-wild,
-where the interactions of many users may be collected without the
-opportunity to survey or interview users. We suggest that analysing
-interaction-state transitions using matrices and simple measures can
-lead to new insights into HCI interactions outside the lab. 
+In this note we have extended previous work using transition matrices
+to understand HCI processes with the application of two simple matrix
+measures, flux and entropy, both of which have been demonstrated to
+have significant discriminatory power with regards to a corpus of 95
+collaborative touch-screen interactions. Not only do these measures
+differentiate between different types of sessions and the internal
+structure of these sessions, but they have explanatory power that has
+thrown new light on the musical interactions under examination. It is
+notable that, for improvised performances, live performances had the
+lowest measure in both flux and entropy, while lab-studies had the
+highest. This may be due to the increased pressure on performers when
+improvising in front of an audience. The internal investigation of
+performances session revealed more structural variety in
+improvisations than compositions. In response, new works could be
+composed that specifically explore different gestural structures in
+touch-screen performance
 
+HCI researchers are increasingly concerned with interactions that
+happen in-the-wild, where the creative collaborations of many users
+may be recorded, but where conducting surveys or interviews would be
+innapropriate. We suggest that analysing interaction-state transitions
+using matrices and simple measures can lead to new insights into HCI
+interactions outside the lab.
 
-%TODO Mention Manovich transmutation stuff
-The macro-gestures that these processes reveal could also be used as
-the basis for new works of new media art~\cite{Manovich:2002ly}.
-
-% Additionally, a wider dissemination of such log data will better
-% support the replication of findings in HCI
-% research~\cite{Wilson:2011ve}
+Data-mining logs of interactions with creative interfaces sugggest
+further approaches for future work. The macro-gestures that these
+processes reveal could be used as the basis for new works of new media
+art~\cite{Manovich:2002ly}. Additionally, a wider dissemination of
+such log data could better support the replication of findings in HCI
+research~\cite{Wilson:2011ve}
 
 %\pagebreak
 \bibliographystyle{SIGCHI-Reference-Format}
