--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -282,7 +282,7 @@ musical dimensions, in order to arrive at conclusions regarding
 artistic style.
 
 In our corpus of iPad musical performances, logs of low-level touch
-data record each performers micro-gestures. However, it has been
+data record each performer's micro-gestures. However, it has been
 established that musical performances on touch-screens can be seen in
 terms of vocabularies of continuous macro gestures that unfold over
 several seconds of touch interaction~\cite{Martin:2014cr}. Improvised
