--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -99,34 +99,27 @@
 \maketitle
 
 \begin{abstract}
-  In this note we describe the analysis of a data archive for an
-  ensemble musical performance practice on touch screens where
-  transition matrix measures are able to distinguish between sessions
-  of different contexts, and the internal structure of these sessions.
-  Traditional methodologies for studying interfaces that support
-  collaborative creativity can be time-consuming and intrusive to
-  implement but our methods may provide a practical alternative for
-  large scale analysis of creative interactions.
 
-  Our archive includes 95 touch data logs of ensemble touch-screen
-  interactions in concerts, rehearsals and formal HCI studies of
-  groups of musicians over more than two years. The data analysis has
-  been undertaken by first classifying these data into higher level
-  gesture types and summarising the performers' transitions between
-  these gestures. We find that two transition-matrix measure, flux,
-  and entropy, can be used to distinguish different performance types
-  and contexts, as well as the internal structure (beginning, middle
-  and end) of the performances in our corpus.
+  In this note we describe the analysis of an interaction data archive
+  associated with a long-term practice-led research program
+  investigating ensemble musical performance practice on touch
+  screens. We use transition matrix measures to distinguish between
+  sessions of different contexts, and the internal structure of these
+  sessions. The data analysis proceeds by first classifying these data
+  into higher level gesture types and summarising the performers'
+  transitions between these gestures. We find that two
+  transition-matrix measure, flux, and entropy, can be used to
+  distinguish different performance types and contexts, as well as the
+  internal structure of the performances in our corpus.
 \end{abstract}
 
 \keywords{  
   Creativity Support Tools;
-  Agent; 
-  Design;
+  Collaborative Interaction;
   Methodology}
 
 \category{H.5.5.}{Information Interfaces and Presentation
-  (e.g. HCI)}{Sound and Music Computing}{ Systems} 
+  (e.g. HCI)}{Sound and Music Computing}{Systems} 
 
 % \category{See
 %   \url{http://acm.org/about/class/1998/} for the full list of ACM
@@ -164,20 +157,22 @@ Modern computing devices and interfaces continue to present
 opportunities to support new kinds of creative expression and
 collaborative interaction~\cite{Resnick:2005yu}. However, it has been
 acknowledged that understanding and evaluating interfaces in creative
-contexts can be challenging~\cite{Shneiderman:2007qv}. In the context
-of live performance, interface evaluation using questionnaires, or
-ethnographic data gathering can miss the dynamic needs of artists
-during collaborative interactions and may be impractical in live
-performative contexts. When performers use a combuter-based artistic
-interface, logged interaction data which has been collected for
-curation and preservation~\cite{England:2014ys}, might also allow
-quantitative investigation into these performances. In this note we
-will show how an archive of collaborative performance data logs can be
-subjected to a quantitative analysis based on transition probabilities
-between gestural states. We will demonstrate that two measures on
-transition matrices, flux and entropy, show significant differences
-between different kinds of performances, and give insight into the
-internal structure of these performances.
+contexts can be challenging~\cite{Shneiderman:2007qv}. This problem is
+even more pronounced in artistic \emph{performance}, where subjective
+interface evaluation through questionnaires or interviews may be both
+practically difficult and culturally inappropriate. When the interface
+is digital, however, it is still usually trivial to log interaction in
+these situations, which is useful for curation and
+preservation~\cite{England:2014ys}. The question is: can this log data
+be used not just as a record for posterity, but in support of a
+broader creative-practice led research program?
+
+In this note we will show how an archive of collaborative performance
+data logs can be subjected to a quantitative analysis based on
+transition probabilities between gestural states. We will demonstrate
+that two measures on transition matrices, flux and entropy, show
+significant differences between different kinds of performances, and
+give insight into the internal structure of these performances.
 
 Our archive of interaction data logs has been accumulated to support a
 long-term practice-led research program into simple iPad interfaces
@@ -188,7 +183,7 @@ where the participants used our custom-built, touch-screen apps on
 Apple iPad devices. Although several different apps have been included
 in our corpus, they shared a common mode of free-form touch
 interaction where tapping produced short sounds and swirling or
-swiping produced long sounds. Apart from this commonality, the apps
+swiping produced long sounds. Apart from these similarities, the apps
 featured a variety of sound palettes, different kinds of visual
 feedback, and different kinds of networked interactions (between the
 iPads in an ensemble and with a central server).
@@ -207,17 +202,16 @@ free-form improvisations, a number of rehearsals and performances
 involved composed pieces where the musicians read and performed
 percussion notation using the apps.
 
-Representative photographs of some of these session contexts are are
-shown Figure~\ref{fig:three-performance-contexts}) and other
-descriptive statistics about the sessions are shown in Table
-\ref{corpus-table}. In our corpus, the median length of sessions is
-7m26s and the median number of participants per ensemble is four. Each
-session record is labelled with metadata about the session
-\emph{context} (performance, rehearsal, study), session \emph{type}
-(improvisation or composition), and \emph{instrumentation}
-(iPads-only, or iPads with acoustic percussion). The distribution of
-recorded sessions by context and type is shown in Figure
-\ref{fig:count-data}.
+Some of these session contexts are are shown
+Figure~\ref{fig:three-performance-contexts}) and other descriptive
+statistics about the sessions are shown in Table \ref{corpus-table}.
+In our corpus, the median length of sessions is 7m26s and the median
+number of participants per ensemble is four. Each session record is
+labelled with metadata about the session \emph{context} (performance,
+rehearsal, study), session \emph{type} (improvisation or composition),
+and \emph{instrumentation} (iPads-only, or iPads with acoustic
+percussion). The distribution of recorded sessions by context and type
+is shown in Figure \ref{fig:count-data}.
 
 % It is a feature of creative expression in the arts that highly skilled
 % practitioners exploit simple tools to produce works of beauty whether
@@ -499,30 +493,32 @@ measures, flux and entropy, both of which have been demonstrated to
 have significant discriminatory power with regards to a corpus of 95
 collaborative touch-screen interactions. Not only do these measures
 differentiate between different types of sessions and the internal
-structure of these sessions, but they have explanatory power that has
-thrown new light on the musical interactions under examination. It is
-notable that, for improvised performances, live performances had the
-lowest measure in both flux and entropy, while lab-studies had the
-highest. This may be due to the increased pressure on performers when
-improvising in front of an audience. The internal investigation of
-performances session revealed more structural variety in
+structure of these sessions, they provide qualitative insight into the
+performances as well. For improvised performances, live performances
+had the lowest measure in both flux and entropy, while lab-studies had
+the highest. This may be due to the increased pressure on performers
+when improvising in front of an audience. The internal investigation
+of performances session revealed more structural variety in
 improvisations than compositions. In response, new works could be
 composed that specifically explore different gestural structures in
-touch-screen performance
+touch-screen performance.
 
-HCI researchers are increasingly concerned with interactions that
-happen in-the-wild, where the creative collaborations of many users
-may be recorded, but where conducting surveys or interviews would be
-innapropriate. We suggest that analysing interaction-state transitions
-using matrices and simple measures can lead to new insights into HCI
-interactions outside the lab.
-
-Data-mining logs of interactions with creative interfaces sugggest
+Data-mining logs of interactions with creative interfaces suggest
 further approaches for future work. The macro-gestures that these
 processes reveal could be used as the basis for new works of new media
 art~\cite{Manovich:2002ly}. Additionally, a wider dissemination of
 such log data could better support the replication of findings in HCI
-research~\cite{Wilson:2011ve}
+research~\cite{Wilson:2011ve}. Finally, flux and entropy proved useful
+in the analysis of our data corpus, but other transition matrix
+metrics may be more suitable for different interaction data.
+
+HCI researchers are increasingly concerned with interactions that
+happen in-the-wild, where the creative collaborations of many users
+may be recorded, but where conducting surveys or interviews is
+innapropriate. We suggest that analysing interaction-state transitions
+using matrices and simple measures can lead to new insights into HCI
+interactions outside the lab.
+
 
 %\pagebreak
 \bibliographystyle{SIGCHI-Reference-Format}
