changed ACM category
not sure how to deal with the sub sub category descriptor…

--- a/flux-entropy-paper/flux-entropy-paper.tex
+++ b/flux-entropy-paper/flux-entropy-paper.tex
@@ -119,7 +119,7 @@
   Methodology}
 
 \category{H.5.5.}{Information Interfaces and Presentation
-  (e.g. HCI)}{Sound and Music Computing}{Systems} 
+  (e.g. HCI)}{Sound and Music Computing,}{ Methodologies and techniques}
 
 % \category{See
 %   \url{http://acm.org/about/class/1998/} for the full list of ACM
